<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.498"
            tools:context=".MainActivity">

            <Button
                android:id="@+id/button_challenge1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/challenge_1"
                app:layout_constraintEnd_toEndOf="@+id/button_without_barier"
                app:layout_constraintStart_toStartOf="@+id/button_without_barier"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_challenge2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/challenge_2"
                app:layout_constraintEnd_toEndOf="@+id/button_without_barier"
                app:layout_constraintStart_toStartOf="@+id/button_without_barier"
                app:layout_constraintTop_toBottomOf="@+id/button_challenge1" />

            <Button
                android:id="@+id/button_challenge3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/challenge_3"
                app:layout_constraintEnd_toEndOf="@+id/button_without_barier"
                app:layout_constraintStart_toStartOf="@+id/button_without_barier"
                app:layout_constraintTop_toBottomOf="@+id/button_challenge2" />

            <Button
                android:id="@+id/button_challenge4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/challenge_4"
                app:layout_constraintEnd_toEndOf="@+id/button_without_barier"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/button_without_barier"
                app:layout_constraintTop_toBottomOf="@+id/button_challenge3" />

            <Button
                android:id="@+id/button_bonus1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/bonus_1"
                app:layout_constraintEnd_toEndOf="@+id/button_without_barier"
                app:layout_constraintStart_toStartOf="@+id/button_without_barier"
                app:layout_constraintTop_toBottomOf="@+id/button_challenge4" />

            <Button
                android:id="@+id/button_bonus2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/bonus_2"
                app:layout_constraintEnd_toEndOf="@+id/button_without_barier"
                app:layout_constraintStart_toStartOf="@+id/button_without_barier"
                app:layout_constraintTop_toBottomOf="@+id/button_bonus1" />

            <Button
                android:id="@+id/button_without_barier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/without_barier"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_bonus2" />
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>



