<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/space_16"
    tools:context=".WithoutBarierActivity">

    <LinearLayout
        android:id="@+id/linearlayout_layout_sus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_8"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:contentDescription="@null"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:src="@drawable/android_3" />

        <TextView
            android:textSize="@dimen/space_16"
            android:id="@+id/textview_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_8"
            android:text="text" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout_layout_sus"
        android:text="@string/do_something" />

    <Button
        android:id="@+id/button_add_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:text="@string/plus_text"
        android:textSize="@dimen/size_16" />

    <Button
        android:id="@+id/button_remove_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/minus_text"
        android:textSize="@dimen/size_16" />

</RelativeLayout>